Again trying to fix white space on scroll

--- a/src/Styles/NewPost.css
+++ b/src/Styles/NewPost.css
@@ -2,12 +2,12 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     justify-content: center;
     left: 0;
     position: fixed;
     top: 0;
-    width: 100vw;
+    width: 100%;
     z-index: 4;
 }
 .NewPost-Wrap{
